# friendlyfire

./: .gitignore  Cargo.toml  README.md  bun.lockb  command-center.tscn  command_center.gd.uid  flake.nix  icon.svg.import  index.html  package.json  pnpm-lock.yaml  project.godot  rust-toolchain.toml  slave.html
.github/workflows/: release.yml  test.yml
addons/godot-git-plugin/: git_plugin.gdextension.uid
command-center/: Cargo.toml
server/: Cargo.toml
shared/: Cargo.toml
shared/src/: lib.rs  overlay.rs
shared/src/message/: client.rs  (+3 more)
splash-screen/: Cargo.toml
splash-screen/src/: compositor.rs  frame.rs  main.rs  window.rs
splash-screen/src/compositor/: compositor.rs  media.rs  mod.rs
splash-screen/src/media/: decoded.rs  decoder.rs  frame.rs  mod.rs
splash-screen/src/media/image/: basic_decoder.rs  gif_decoder.rs  mod.rs
splash-screen/src/network/: ws.rs
splash-screen/src/overlay/: animated.rs  image.rs  mod.rs  overlay.rs  text.rs  traits.rs
splash-screen/src/window/: mod.rs  rendering.rs  splash_window.rs  traits.rs  win32.rs  win32error.rs  winapi.rs
splash-screen/src/window/linux/: mod.rs  wayland.rs  x11.rs
splash-screen/src/window/win32/: mod.rs  rendering.rs  splash_window.rs
src/: App.tsx  SocketContext.tsx  main.rs  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  slave.json
src-tauri/src/: lib.rs
src/components/: ImageUploader.tsx  UserList.tsx
src/main/: App.tsx  SocketContext.tsx  main.tsx
src/slave/: slave.tsx
src/utils/: fileUtils.ts  store.ts  uploadUtils.ts
(+23 files in other folders)
