[package]
name = "friendlyfire-splash-screen"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
windows = { version = "0.57", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com",
  "Win32_Graphics_Imaging",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
] }

[package.metadata.docs.rs]
features = ["windows/docs"]
